--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-mapbox-gl": "^3.8.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-swipeable-views": "^0.12.14",
     "react-toastify": "^4.1.0",
     "react-transition-group": "^2.4.0",
     "reactstrap": "^6.1.0",
