--- a/back/app/config/routing.yml
+++ b/back/app/config/routing.yml
@@ -1,3 +1,11 @@
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
+
+api:
+    resource: "@AppBundle/Controller/Api"
+    host:     "api.{domain}"
+
+back:
+    resource: "@AppBundle/Controller/Back"
+    host:     "back.{domain}"
