--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "0.1.0-11",
     "@material-ui/core": "^1.3.0",
     "axios": "^0.18.0",
+    "bootstrap": "^4.1.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-mapbox-gl": "^3.8.0",
