--- a/back/app/config/routing.yml
+++ b/back/app/config/routing.yml
@@ -1,11 +1,13 @@
-app:
-    resource: '@AppBundle/Controller/'
-    type: annotation
-
 api:
     resource: "@AppBundle/Controller/Api"
-    host:     "api.{domain}"
+    type: annotation
+    host: "api.{domain}"
+    defaults:
+        domain: '%domain%'
 
 back:
     resource: "@AppBundle/Controller/Back"
+    type: annotation
     host:     "back.{domain}"
+    defaults:
+        domain: '%domain%'
