upload image + redimensionnement

--- a/back/app/config/config.yml
+++ b/back/app/config/config.yml
@@ -11,6 +11,7 @@ parameters:
     project_directory: '%kernel.project_dir%'
     web_directory: '/web'
     upload_photo_directory: '/assets/images/uploaded'
+    upload_photo_profil_directory: '/assets/images/uploaded/profilPicture'
 
 framework:
     #esi: ~
