--- a/back/app/config/config.yml
+++ b/back/app/config/config.yml
@@ -7,7 +7,8 @@ imports:
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en
-    domain: wildportfolio.com
+    domain: adopteMartin.com
+
 
 framework:
     #esi: ~
