--- a/back/app/config/config_dev.yml
+++ b/back/app/config/config_dev.yml
@@ -2,7 +2,7 @@ imports:
     - { resource: config.yml }
 
 parameters:
-    domain: localhost
+    domain: adopteMartin.com
 
 framework:
     router:
