--- a/back/app/config/config.yml
+++ b/back/app/config/config.yml
@@ -12,6 +12,7 @@ parameters:
     web_directory: '/web'
     upload_photo_directory: '/assets/images/uploaded'
     upload_photo_profil_directory: '/assets/images/uploaded/profilPicture'
+    upload_photo_cover_directory: '/assets/images/uploaded/coverPicture'
 
 framework:
     #esi: ~
