--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "@material-ui/core": "^1.3.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
+    "jquery": "^3.3.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-mapbox-gl": "^3.8.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-slick": "^0.23.1",
     "react-swipeable-views": "^0.12.14",
     "react-toastify": "^4.1.0",
     "react-transition-group": "^2.4.0",
     "reactstrap": "^6.1.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^3.3.3",
     "validator": "^10.4.0"
   },
