--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "0.1.0-11",
     "@material-ui/core": "^1.3.0",
+    "@material-ui/icons": "^1.1.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "react": "^16.4.1",
