--- a/back/app/config/config.yml
+++ b/back/app/config/config.yml
@@ -10,6 +10,7 @@ parameters:
     project_directory: '%kernel.project_dir%'
     web_directory: '/web'
     upload_photo_directory: '/assets/images/uploaded'
+    upload_cv_directory: '/assets/images/uploaded/test'
     upload_photo_profil_directory: '/assets/images/uploaded/profilPicture'
     upload_photo_cover_directory: '/assets/images/uploaded/coverPicture'
     domain: adopteflavien.com
