--- a/back/app/config/config_dev.yml
+++ b/back/app/config/config_dev.yml
@@ -3,8 +3,8 @@ imports:
 
 parameters:
 
-    domain: adopteMartin.com
-    domaina: adopteMartin.com
+    domain: adopteflavien.com
+    domaina: adopteflavien.com
 
 
 framework:
