--- a/back/app/config/security.yml
+++ b/back/app/config/security.yml
@@ -26,7 +26,7 @@ security:
             form_login :
                 login_path: login
                 check_path: login
-                default_target_path: redirection
+                default_target_path: back.user.index
                 always_use_default_target_path: true
             logout:
                 path: logout
