--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-swipeable-views": "^0.12.14",
     "react-toastify": "^4.1.0",
     "react-transition-group": "^2.4.0",
+    "react-typing-animation": "^1.3.3",
+    "react-typist": "^2.0.4",
     "reactstrap": "^6.1.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^3.3.3",
